--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,27 +6,40 @@
   font-family: HelveticaNeue;
   src: url(../../public/fonts/HelveticaNeueLTStd-Roman.otf);
   font-weight: 400;
+  font-display: swap;
 }
 @font-face {
   font-family: HelveticaNeue;
   src: url(../../public//fonts/HelveticaNeueLTStd-Md.otf);
   font-weight: 500;
+  font-display: swap;
 }
 @font-face {
   font-family: HelveticaNeue;
   src: url(../../public//fonts/HelveticaNeueLTStd-Lt.otf);
   font-weight: 200;
+  font-display: swap;
 }
 @font-face {
   font-family: HelveticaNeue;
   src: url(../../public//fonts/HelveticaNeueLTStd-Bd.otf);
   font-weight: bold;
+  font-display: swap;
 }
-html {
-  font-size: 1rem;
-}
+
 body {
   font-family: HelveticaNeue;
+  font-size: 12px;
+}
+@media (min-width: 769px) {
+  body {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1025px) {
+  body {
+    font-size: 16px;
+  }
 }
 
 /* For Webkit-based browsers (Chrome, Safari and Opera) */
