--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,22 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: HelveticaNeue;
   src: url(../../public/fonts/HelveticaNeueLTStd-Roman.otf);
+  font-weight: 400;
+  font-display: swap;
+} */
+@font-face {
+  font-family: HelveticaNeue;
+  src: url(../../public//fonts/HelveticaNeueLTStd-Md.otf);
   font-weight: 400;
   font-display: swap;
 }
 @font-face {
   font-family: HelveticaNeue;
-  src: url(../../public//fonts/HelveticaNeueLTStd-Md.otf);
-  font-weight: 500;
-  font-display: swap;
-}
-@font-face {
-  font-family: HelveticaNeue;
   src: url(../../public//fonts/HelveticaNeueLTStd-Lt.otf);
-  font-weight: 200;
+  font-weight: 300;
   font-display: swap;
 }
 @font-face {
